_generated-doc/2.7/config/quarkus-qute.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-qute_configuration]]link:#quarkus-qute_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.suffixes]]`link:#quarkus-qute_quarkus.qute.suffixes[quarkus.qute.suffixes]`

[.description]
--
The list of suffixes used when attempting to locate a template file.

By default, `engine.getTemplate("foo")` would result in several lookups: `foo`, `foo.html`, `foo.txt`, etc.
--|list of string 
|`qute.html,qute.txt,html,txt`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.type-check-excludes]]`link:#quarkus-qute_quarkus.qute.type-check-excludes[quarkus.qute.type-check-excludes]`

[.description]
--
The list of exclude rules used to intentionally ignore some parts of an expression when performing type-safe validation. 
 An element value must have at least two parts separated by dot. The last part is used to match the property/method name. The prepended parts are used to match the class name. The value `++*++` can be used to match any name. 
 Examples:  
 - `org.acme.Foo.name` - exclude the property/method `name` on the `org.acme.Foo` class 
 - `org.acme.Foo.++*++` - exclude any property/method on the `org.acme.Foo` class 
 - `++*++.age` - exlude the property/method `age` on any class
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.template-path-exclude]]`link:#quarkus-qute_quarkus.qute.template-path-exclude[quarkus.qute.template-path-exclude]`

[.description]
--
This regular expression is used to exclude template files from the `templates` directory. Excluded templates are neither parsed nor validated during build and are not available at runtime. 
 The matched input is the file path relative from the `templates` directory and the `/` is used as a path separator. 
 By default, the hidden files are excluded. The name of a hidden file starts with a dot.
--|link:https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html[Pattern]
 
|`^\..*\|.*\/\..*$`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.iteration-metadata-prefix]]`link:#quarkus-qute_quarkus.qute.iteration-metadata-prefix[quarkus.qute.iteration-metadata-prefix]`

[.description]
--
The prefix is used to access the iteration metadata inside a loop section. 
 A valid prefix consists of alphanumeric characters and underscores. Three special constants can be used:  
 - `<alias_>` - the alias of an iterated element suffixed with an underscore is used, e.g. `item_hasNext` and `it_count` 
 - `<alias?>` - the alias of an iterated element suffixed with a question mark is used, e.g. `item?hasNext` and `it?count` 
 - `<none>` - no prefix is used, e.g. `hasNext` and `count`  By default, the `<alias_>` constant is set.
--|string 
|`<alias_>`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.escape-content-types]]`link:#quarkus-qute_quarkus.qute.escape-content-types[quarkus.qute.escape-content-types]`

[.description]
--
The list of content types for which the `'`, `"`, `<`, `>` and `&` characters are escaped if a template variant is set.
--|list of string 
|`text/html,text/xml,application/xml,application/xhtml+xml`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.default-charset]]`link:#quarkus-qute_quarkus.qute.default-charset[quarkus.qute.default-charset]`

[.description]
--
The default charset of the templates files.
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a| [[quarkus-qute_quarkus.qute.property-not-found-strategy]]`link:#quarkus-qute_quarkus.qute.property-not-found-strategy[quarkus.qute.property-not-found-strategy]`

[.description]
--
The strategy used when a standalone expression evaluates to a "not found" value at runtime and the `io.quarkus.qute.strict-rendering` config property is set to `false` 
 This strategy is never used when evaluating section parameters, e.g. `++{#++if foo.name++}++`. In such case, it's the responsibility of the section to handle this situation appropriately. 
 By default, the `NOT_FOUND` constant is written to the output. However, in the development mode the `PropertyNotFoundStrategy++#++THROW_EXCEPTION` is used by default, i.e. when the strategy is not specified.
--|`default`, `noop`, `throw-exception`, `output-original` 
|


a| [[quarkus-qute_quarkus.qute.remove-standalone-lines]]`link:#quarkus-qute_quarkus.qute.remove-standalone-lines[quarkus.qute.remove-standalone-lines]`

[.description]
--
Specify whether the parser should remove standalone lines from the output. A standalone line is a line that contains at least one section tag, parameter declaration, or comment but no expression and no non-whitespace character.
--|boolean 
|`true`


a| [[quarkus-qute_quarkus.qute.strict-rendering]]`link:#quarkus-qute_quarkus.qute.strict-rendering[quarkus.qute.strict-rendering]`

[.description]
--
If set to `true` then any expression that is evaluated to a `Results.NotFound` value will always result in a `TemplateException` and the rendering is aborted. 
 Note that the `quarkus.qute.property-not-found-strategy` config property is completely ignored if strict rendering is enabled.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.content-types-content-types]]`link:#quarkus-qute_quarkus.qute.content-types-content-types[quarkus.qute.content-types]`

[.description]
--
The additional map of suffixes to content types. This map is used when working with template variants. By default, the `java.net.URLConnection++#++getFileNameMap()` is used to determine the content type of a template file.
--|`Map<String,String>` 
|

|===